<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!-- <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_ip_address_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ip_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_ip_hint" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/port_num_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port_num_hint" /> -->

        <ProgressBar
            android:id="@+id/test_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/connect"
        android:onClick="onConnectButton" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connect_button"
        android:layout_alignBottom="@+id/connect_button"
        android:layout_toRightOf="@+id/connect_button"
        android:text="@string/refresh"
        android:onClick="onRefreshButton" />

    <Button
        android:id="@+id/run_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/refresh_button"
        android:layout_alignBottom="@+id/refresh_button"
        android:layout_toRightOf="@+id/refresh_button"
        android:onClick="onRunTestButton"
        android:text="@string/run_test_string" />

    <ListView
        android:id="@+id/files_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button"
        android:layout_alignParentLeft="true"
         >
    </ListView>

</RelativeLayout>